<?xml version="1.0"?>
<package format="2">
  <name>volta_description</name>
  <version>0.0.0</version>
  <description>The magellan_description package</description>

  <maintainer email="erian@todo.todo">erian</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>hector_gazebo_plugins</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <export>
  </export>
</package>
