<?xml version="1.0"?>
<package>
  <name>volta_msgs</name>
  <version>6.0.0</version>
  <description>The volta_msgs package</description>

  <maintainer email="nikhil@botsync.sg">Nikhil Venkatesh</maintainer>

  <license>BSD2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
