<?xml version="1.0"?>
<package>
  <name>volta_navigation</name>
  <version>0.0.0</version>

  <description>The volta_navigation package</description>
  <maintainer email="mahendra.l@botsync.co">Mahendra L Seervi</maintainer>

  <license>BSD2</license>
  <author email="nikhil@botsync.sg">Nikhil Venkatesh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>map_server</run_depend>

  <export>
  </export>
</package>
