<?xml version="1.0"?>
<package>
  <name>volta_navigation</name>
  <version>1.1.1</version>
  <description>The volta_navigation package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <author email="mahendra.l@botsync.co">Mahendra L Seervi</author>

  <maintainer email="nilhil@botsync.co">Nikhil Venkatesh</maintainer>
  <maintainer email="toship.s@botsync.co">Toship</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>map_server</run_depend>

  <export>
  </export>
</package>
