<?xml version="1.0"?>
<package format="2">
  <name>volta_teleoperator</name>
  <version>7.0.0</version>
  <description>The volta_teleoperator package</description>

  <maintainer email="nikhil@botsync.sg">nikhil</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>sensor_msgs</depend>
  <depend>volta_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>teleop_twist_joy</depend>
  <depend>actionlib_msgs</depend>
  <export>
  </export>
</package>
