<?xml version="1.0"?>
<package format="2">
  <name>volta_teleoperator</name>
  <version>1.1.1</version>
  <description>The volta_teleoperator package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <author email="mahendra.l@botsync.co">Mahendra L Seervi</author>

  <maintainer email="nilhil@botsync.co">Nikhil Venkatesh</maintainer>
  <maintainer email="toship.s@botsync.co">Toship</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>sensor_msgs</depend>
  <depend>volta_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>teleop_twist_joy</depend>
  <depend>actionlib_msgs</depend>
  <export>
  </export>
</package>
